#135 first step to new structure, not working yet

--- a/OpenRobertaServer/staticResources/css/roberta.css
+++ b/OpenRobertaServer/staticResources/css/roberta.css
@@ -1032,7 +1032,7 @@ background-color
 
 
 }
-#progList table thead, #confList table thead, #show-relations table thead
+#progList table thead, #confList table thead, #show-relations table thead, #logList table thead
 	{
 	text-transform: uppercase;
 	background-color: #898989;
